[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/NewAccountPage.gd" type="Script" id=1]
[ext_resource path="res://resources/ARIAL.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://baseTheme.tres" type="Theme" id=3]
[ext_resource path="res://scripts/ServerConnection.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=9]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 2 )

[node name="newAccount" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 305, 234 )
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="textfields" type="Node" parent="."]
__meta__ = {
"_editor_description_": ""
}

[node name="textboxUsername" type="LineEdit" parent="textfields"]
visible = false
margin_left = 480.0
margin_top = 192.0
margin_right = 800.0
margin_bottom = 248.0
custom_fonts/font = SubResource( 9 )
placeholder_text = "Username"

[node name="textboxPassword" type="LineEdit" parent="textfields"]
visible = false
margin_left = 480.0
margin_top = 272.0
margin_right = 800.0
margin_bottom = 328.0
custom_fonts/font = SubResource( 3 )
secret = true
placeholder_text = "Password"

[node name="labels" type="Node" parent="."]

[node name="textUsername" type="Label" parent="labels"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 184.0
margin_right = -579.0
margin_bottom = -357.0
theme = ExtResource( 3 )
text = "Username:"

[node name="textPassword" type="Label" parent="labels"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 192.0
margin_top = -28.0
margin_right = 440.0
margin_bottom = 31.0
theme = ExtResource( 3 )
text = "Password:"

[node name="textCreateAcc" type="Label" parent="labels"]
visible = false
margin_left = 272.0
margin_top = 56.0
margin_right = 760.0
margin_bottom = 115.0
theme = ExtResource( 3 )
text = "Create Your Account"

[node name="textRole" type="Label" parent="labels"]
margin_left = 224.0
margin_top = 72.0
margin_right = 797.0
margin_bottom = 171.0
theme = ExtResource( 3 )
text = "What role are you?"
align = 1

[node name="textErrorMessage" type="Label" parent="labels"]
visible = false
margin_left = 120.0
margin_top = 344.0
margin_right = 896.0
margin_bottom = 419.0
custom_colors/font_color = Color( 0.898039, 0.0392157, 0.0392157, 1 )
custom_fonts/font = SubResource( 10 )
text = "Account already exist"
align = 1
valign = 1
autowrap = true

[node name="buttons" type="Node" parent="."]

[node name="buttonStudent" type="Button" parent="buttons"]
margin_left = 320.0
margin_top = 184.0
margin_right = 680.0
margin_bottom = 288.0
theme = ExtResource( 3 )
text = "Student"

[node name="buttonTeacher" type="Button" parent="buttons"]
margin_left = 320.0
margin_top = 320.0
margin_right = 680.0
margin_bottom = 424.0
theme = ExtResource( 3 )
text = "Teacher"

[node name="buttonSubmit" type="Button" parent="buttons"]
visible = false
margin_left = 352.0
margin_top = 456.0
margin_right = 680.0
margin_bottom = 560.0
theme = ExtResource( 3 )
text = "Submit"

[node name="ServerConnection" type="Node" parent="."]
script = ExtResource( 4 )

[connection signal="pressed" from="buttons/buttonStudent" to="." method="_on_StudentButton_pressed"]
[connection signal="pressed" from="buttons/buttonTeacher" to="." method="_on_buttonTeacher_pressed"]
[connection signal="pressed" from="buttons/buttonSubmit" to="." method="_on_buttonSubmit_pressed"]
